# gender-classification

./: .gitignore  README.md  crop.py  eye-points.txt  image-paths.txt
classifiers/: knn.cpp  naive-bayes.r  neural-net.r  svm.cpp
features/: lbp_features.txt  lbp_features_shuffle.txt
features/cross-validation/fold-1/: validation.txt
features/cross-validation/fold-10/: train.txt
features/cross-validation/fold-2/: train.txt
features/cross-validation/fold-3/: train.txt  validation.txt
features/cross-validation/fold-4/: validation.txt
lbp-features-code/: CMakeLists.txt  histogram.cpp  histogram.hpp  lbp_features.cpp
results/: accuracies.txt
results/knn-3/: knn3-1.txt  knn3-2.txt  knn3-3.txt  knn3-4.txt  knn3-5.txt
results/knn-5/: knn5-1.txt  knn5-2.txt  knn5-3.txt  knn5-4.txt  knn5-5.txt
results/knn-7/: knn7-1.txt  knn7-3.txt  knn7-4.txt
results/knn-9/: knn9-1.txt  knn9-2.txt  knn9-3.txt  knn9-5.txt
results/naive-bayes/: naive-bayes-1.txt  naive-bayes-2.txt  naive-bayes-3.txt  naive-bayes-4.txt  naive-bayes-5.txt
results/neural-net([531, 50, 20, 1], 0.007)/: neural-net-1.txt  neural-net-2.txt  neural-net-3.txt  neural-net-4.txt  neural-net-5.txt
results/neural-net([531, 80, 1] 0.003)/: neural-net-1.txt  neural-net-2.txt  neural-net-3.txt  neural-net-4.txt  neural-net-5.txt
results/neural-net([531, 85, 1] 0.005)/: neural-net-1.txt  neural-net-2.txt  neural-net-3.txt  neural-net-4.txt  neural-net-5.txt
results/svm-linear/: svm-5.txt
results/svm-quadratic/: svm-1.txt  svm-2.txt  svm-3.txt  svm-4.txt
(+24 files in other folders)
